<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/border_three"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView">


    <TextView
        android:id="@+id/name_apiary"
        android:layout_width="290dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/report_name"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/bSearch"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_three_pattern"
        android:drawableLeft="@drawable/delete"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/delete"
        android:textColor="@color/brown"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toReturn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bSearch2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_three_pattern"
        android:drawableLeft="@drawable/download"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/download"
        android:textColor="@color/brown"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bSearch"
        app:layout_constraintTop_toBottomOf="@+id/toReturn" />

    <Button
        android:id="@+id/toReturn"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/border_three_pattern"
        android:fontFamily="@font/montserrat"
        android:padding="10dp"
        android:text="@string/toReturn"
        android:textColor="@color/brown"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_apiary" />


</androidx.constraintlayout.widget.ConstraintLayout>